--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-apexcharts": "^1.7.0",
     "react-dom": "19.0.0",
     "react-markdown": "^10.1.0",
+    "react-spinners": "^0.15.0",
     "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
